--- a/orgs/affiliations.mdx
+++ b/orgs/affiliations.mdx
@@ -1,4 +1,22 @@
 ---
+title: "Affiliations"
+description: "Membership scope and typical patterns"
+---
+
+# Affiliations
+
+Affiliations define a user’s membership in Organizations and Projects.
+
+## Scope
+- Organization affiliation grants access to Projects and components within the Org.
+- Users can hold different roles per Org.
+
+## Typical patterns
+- One personal Org (Owner) + one or more team Orgs (Member/Admin).
+- Contractors invited as Members with limited permissions.
+
+> note: Granularity — Roles apply at the Organization level; Projects inherit Org‑level access policies.
+---
 title: Affiliations
 description: ""
 ---
