--- a/workspace/canvas/project-view.mdx
+++ b/workspace/canvas/project-view.mdx
@@ -1,10 +1,20 @@
 ---
-title: Project View
-description: ""
+title: "Canvas: Project View"
+description: "Top‑level components overview and common actions"
 ---
 
-# Project View
+# Canvas: Project View
 
-> Draft page for `workspace/canvas/project-view`.
+Project View lists the top‑level components (Agents or Flows) for the Project.
 
-<!-- Add content here -->
+## Key points
+- Items are not connected here; it’s an overview/list.
+- Only top‑level Agents/Flows can be exposed via API or Schedule.
+- Top‑level components can contain other components.
+
+## Common actions
+- Open a top‑level Agent/Flow to work inside it.
+- Create a new Agent or Flow from the Canvas.
+- Rename and organize to reflect your domain.
+
+> tip: Design for exposure — If you plan to expose something as an API or Schedule, keep it top‑level and give it a stable name early.
