--- a/workspace/properties/components/content/flows.mdx
+++ b/workspace/properties/components/content/flows.mdx
@@ -1,10 +1,20 @@
 ---
-title: Flows
-description: ""
+title: "Properties → Components → Content → Flows"
+description: "Arrange sub‑components and configure flow behavior"
 ---
 
-# Flows
+# Properties → Components → Content → Flows
 
-> Draft page for `workspace/properties/components/content/flows`.
+Flows contain components executed in a defined order or pattern.
 
-<!-- Add content here -->
+## Configure behavior
+- Arrange sub‑components (Actions/Agents/Flows) on the Canvas.
+- Use Input/Output ports to define data entering and leaving the Flow.
+- Optionally design parallel paths (see Input & Output → Parallel).
+
+## When to use a Flow
+- Multistep transformations
+- Branching logic
+- Orchestration of tool calls
+
+> note: Composability — A Flow can be used as a Node inside another Flow or as a tool for an Agent.
