--- a/workspace/properties/overview.mdx
+++ b/workspace/properties/overview.mdx
@@ -1,10 +1,16 @@
 ---
-title: Overview
-description: ""
+title: "Properties Panel: Overview"
+description: "Configure and run components; sections and context awareness"
 ---
 
-# Overview
+# Properties Panel: Overview
 
-> Draft page for `workspace/properties/overview`.
+The Properties Panel adapts to your selection and is where you configure and run components.
 
-<!-- Add content here -->
+## Sections
+- Global — Organization/Project‑level settings available to all components in the Project (e.g., Variables).
+- Components — Definition/Information and Content for the selected Node.
+- Execute — Run the selected Node with a JSON payload.
+- Input & Output — Define inputs/outputs, types, defaults, and parallel execution behavior.
+
+> note: Context aware — The Properties Panel shows only the sections relevant to your current selection (Project, Flow, Agent, or Action).
