--- a/accounts/admin.mdx
+++ b/accounts/admin.mdx
@@ -1,4 +1,17 @@
 ---
+title: "Account Admin (Coming Soon)"
+description: "Upcoming personal account management features"
+---
+
+# Account Admin (Coming Soon)
+
+An upcoming page to manage personal account settings beyond the profile:
+- Notification preferences
+- Connected identities
+- Security controls
+
+Stay tuned as we expand account‑level administration features.
+---
 title: Admin
 description: ""
 ---
