--- a/community/join-discord.mdx
+++ b/community/join-discord.mdx
@@ -1,10 +1,26 @@
 ---
-title: Join Discord
-description: ""
+title: "Join the Conversation"
+description: "Where to find us, how to get help, and code of conduct"
 ---
 
-# Join Discord
+# Join the Conversation
 
-> Draft page for `community/join-discord`.
+We’re building Triform openly and value your feedback, ideas, and bug reports.
 
-<!-- Add content here -->
+## Where to find us
+- Discord — Chat with the team and community, share patterns, get help.
+- Roadmap thread — Track progress and suggest features.
+
+👉 Join here: https://www.notion.so/Roadmap-1fa0c5f9afca80fbba64e5d45d1bd951?pvs=21
+
+## How to get the most out of the community
+- Include context: Org/Project, component names, and a minimal Payload.
+- Share what you tried and what you expected.
+- Tag posts with #help, #feature‑request, or #show‑and‑tell.
+
+## Code of conduct
+- Be respectful. Assume good intent.
+- No sensitive data or secrets in public channels.
+- Credit sources and contributors.
+
+> tip: Help us help you — A small, reproducible example (one Flow, one Payload) dramatically speeds up assistance.
