--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,39 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Welcome"
+description: "Triform overview and five‑minute quickstart"
 ---
 
-## Setting up
+# Welcome to Triform
 
-Get your documentation site up and running in minutes.
+Triform is a visual platform for building, running, and monitoring AI‑powered systems. Instead of stitching together code and configs, you **compose logic on a Canvas** as Nodes (Agents, Flows, Actions) and connect them with Edges.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+## Who this guide is for
+- Engineers building end‑to‑end AI workflows
+- Product teams iterating quickly on prototypes
+- Non‑technical collaborators reviewing and testing behavior
 
-## Make it yours
+## What you can build
+- Tool‑using **Agents** that call Actions/Flows
+- **Flows** that orchestrate multi‑step logic
+- **Actions** that run precise pieces of Python
+- APIs or scheduled jobs that expose top‑level components
 
-Design a docs site that looks great and empowers your users.
+## How Triform is organized
+- **Organizations** → top‑level ownership & access
+- **Projects** → focused workspaces inside an Organization
+- **Library** → reusable building blocks (Actions, Flows, etc.)
+- **Canvas** → the visual surface where you design and debug
 
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+## Five‑minute Quickstart
+1. Sign in at `app.triform.ai` with Discord or GitHub.
+2. You land in your first Project with the Canvas open.
+3. Create a Flow or Agent from the Canvas.
+4. Connect Nodes with Edges to shape behavior.
+5. Execute it from the Properties → Execute panel.
 
-## Create beautiful pages
+> tip: Start with a Flow: Input → Action → Output. Use the Execute panel to run a small JSON payload.
 
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+## Need help?
+- Use the Chat Panel (Triton) to create, connect, or run components conversationally.
+- Invite teammates from Profile → Organization → View.
+- Share feedback any time—your input shapes our roadmap.
