--- a/orgs/overview.mdx
+++ b/orgs/overview.mdx
@@ -1,4 +1,23 @@
 ---
+title: "Organizations (Overview)"
+description: "Collaboration, ownership, governance, and working across orgs"
+---
+
+# Organizations (Overview)
+
+An Organization is the top‑level unit of collaboration, ownership, and governance in Triform.
+
+## Responsibilities
+- Holds Users, Projects, Nodes, Variables, and API tokens.
+- Governs access control and visibility (public/private).
+- Manages GitHub linking, billing, and Org‑wide settings.
+
+## Working across Orgs
+- Users can belong to multiple Organizations.
+- Switch the active Organization from the Profile menu.
+
+> tip: Model the company — Mirror your company/team structure at the Organization level; keep sensitive Projects in separate Orgs if needed.
+---
 title: Overview
 description: ""
 ---
