--- a/workspace/canvas/flow-view/basics.mdx
+++ b/workspace/canvas/flow-view/basics.mdx
@@ -1,10 +1,25 @@
 ---
-title: Basics
-description: ""
+title: "Flow View: Basics"
+description: "Anatomy of a Flow and how to work inside it"
 ---
 
-# Basics
+# Flow View: Basics
 
-> Draft page for `workspace/canvas/flow-view/basics`.
+A Flow connects Nodes (Actions, Agents, sub‑Flows) with Edges to define execution.
 
-<!-- Add content here -->
+## Anatomy
+- Input Node: entry points for data.
+- Processing Nodes: Actions/Agents/Flows.
+- Output Node: exit points for results.
+
+## Typical pattern
+1. Data enters via Input.
+2. One or more Nodes transform or route it.
+3. Data leaves via Output.
+
+## Working inside a Flow
+- Create components (right‑click → ＋).
+- Connect components by dragging from a connection point.
+- Execute the Flow from Properties → Execute.
+
+> tip: Start minimal — Begin with a single Action between Input and Output. Add parallel branches or conditions after the basic path works.
