--- a/workspace/canvas/flow-view/node-interactions.mdx
+++ b/workspace/canvas/flow-view/node-interactions.mdx
@@ -1,10 +1,22 @@
 ---
-title: Node Interactions
-description: ""
+title: "Flow View: Node Interactions"
+description: "Move, inspect, open, and use the context menu"
 ---
 
-# Node Interactions
+# Flow View: Node Interactions
 
-> Draft page for `workspace/canvas/flow-view/node-interactions`.
+Use simple gestures to keep Flows readable and manageable.
 
-<!-- Add content here -->
+## Move & arrange
+- Drag Nodes to align and reduce crossing Edges.
+
+## Inspect
+- Click a Node to view its configuration in Properties.
+
+## Open
+- Double‑click to open an Action, Agent, or sub‑Flow.
+
+## Context menu
+- Right‑click a Node for context‑specific actions (options vary by Node type).
+
+> tip: Declutter early — As a Flow grows, periodically rearrange Nodes to preserve left‑to‑right data flow and reduce cognitive load.
