--- a/workspace/chat-panel.mdx
+++ b/workspace/chat-panel.mdx
@@ -1,10 +1,23 @@
 ---
-title: Chat Panel
-description: ""
+title: "Chat Panel (Triton)"
+description: "Conversational interface to author, wire, run, and explain"
 ---
 
-# Chat Panel
+# Chat Panel (Triton)
 
-> Draft page for `workspace/chat-panel`.
+The Chat Panel is your conversational interface with Triform’s AI, Triton. Use it to create, edit, connect, or execute components.
 
-<!-- Add content here -->
+## What you can do
+- Author components ("Create a Flow named ingest with input `text`").
+- Wire connections ("Connect `Input.text` to `normalize.input`").
+- Run executions ("Run the Flow with `{ \"text\": \"hello\" }`").
+- Explain structures ("What does this Flow do?").
+
+## @‑context
+- Type `@` to reference a component (e.g., `@summarize_text`).
+- Triton focuses actions and answers on what you mention.
+
+## Activity updates
+- Triton posts status messages when it performs changes or runs tasks.
+
+> tip: Be explicit — Include component names and ports in your messages to avoid ambiguity and speed up Triton’s actions.
