--- a/workspace/properties/components/content/actions.mdx
+++ b/workspace/properties/components/content/actions.mdx
@@ -1,10 +1,24 @@
 ---
-title: Actions
-description: ""
+title: "Properties → Components → Content → Actions"
+description: "Action structure, guidelines, and testing"
 ---
 
-# Actions
+# Properties → Components → Content → Actions
 
-> Draft page for `workspace/properties/components/content/actions`.
+Actions are atomic executable units written in Python.
 
-<!-- Add content here -->
+## Structure
+- Action.py — the Python implementation.
+- README — technical documentation of purpose, I/O, examples.
+- requirements.txt — Python dependencies (pure‑Python only; no binary installs in the image).
+
+## Guidelines
+- Keep Actions small and single‑purpose.
+- Define a clear input → output contract.
+- Pin dependencies conservatively in `requirements.txt`.
+
+## Testing
+- Use Execute with small payloads to validate behavior in isolation.
+- Save payloads as examples for reproducibility.
+
+> warning: Dependencies — Only dependencies that do not require binary installations are supported in the build image.
