--- a/workspace/properties/components/definition.mdx
+++ b/workspace/properties/components/definition.mdx
@@ -1,10 +1,20 @@
 ---
-title: Definition
-description: ""
+title: "Properties → Components → Definition & Information"
+description: "Capture description, requirements, and constraints"
 ---
 
-# Definition
+# Properties → Components → Definition & Information
 
-> Draft page for `workspace/properties/components/definition`.
+Capture intent and requirements for the selected component.
 
-<!-- Add content here -->
+## What to include
+- Description — what the component does and why it exists.
+- Requirements — inputs expected, dependencies, or assumptions.
+- Constraints — limits, known edge cases, or quotas to consider.
+
+## Why it matters
+- Creates shared understanding across the team.
+- Speeds up onboarding and troubleshooting.
+- Serves as living documentation close to the code.
+
+> tip: Write for the next person — Assume the reader has context on Triform but not on your domain. Short, precise, and example‑driven descriptions work best.
