--- a/workspace/properties/global-variables.mdx
+++ b/workspace/properties/global-variables.mdx
@@ -1,10 +1,21 @@
 ---
-title: Global Variables
-description: ""
+title: "Properties → Global Variables"
+description: "Define and reference Project‑scoped configuration"
 ---
 
-# Global Variables
+# Properties → Global Variables
 
-> Draft page for `workspace/properties/global-variables`.
+Define Variables that components in the Project can use.
 
-<!-- Add content here -->
+## What to store
+- Configuration values (e.g., feature flags, dataset names).
+- Non‑secret constants used across Actions and Flows.
+
+## Referencing variables
+- Use variables in your Actions and configuration to avoid duplicating values.
+
+## Tips
+- Prefer descriptive names (e.g., `default_temperature`, `region`).
+- Scope values per Project to keep experiments isolated.
+
+> warning: Secrets — Store sensitive credentials in your secure mechanism of choice. Avoid committing secrets directly as plain variables.
