--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,39 @@
 ---
-title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+title: "Welcome to Triform"
+description: "Start building awesome agents in minutes"
 ---
+Triform is a visual platform for building, running, and monitoring AI‑powered systems. Instead of stitching together code and configs, you **compose logic on a Canvas** as Nodes (Agents, Flows, Actions) and connect them with Edges.
 
-## Get started in three steps
+## Who this guide is for
+- Engineers building end‑to‑end AI workflows
+- Product teams iterating quickly on prototypes
+- Non‑technical collaborators reviewing and testing behavior
 
-Get your documentation site running locally and make your first customization.
+## Two‑minute Quickstart
+1. **Sign in** at `app.triform.ai` with Discord or GitHub.
+2. You land in your first **Project** with the **Canvas** open.
+3. **Chat** with Triton and ask him to build something.
+4. **Watch** Triton plan, build and test your solution.
+5. **Execute** it from the **Properties → Execute** panel.
 
-### Step 1: Set up your local environment
+!!! tip "Fastest first success"
+    Start with a Flow: *Build me a news gatherer that collects news from 15 different Swedish sources and summarizes them*. Use the Execute panel to run a small JSON payload.
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+## What you can build
+- Tool‑using **Agents** that call Actions/Flows
+- **Flows** that orchestrate multi‑step logic
+- **Actions** that run precise pieces of Python
+- APIs or scheduled jobs that expose top‑level components
 
-### Step 2: Deploy your changes
+## How Triform is organized
+- **Organizations** → top‑level ownership & access
+- **Projects** → focused workspaces inside an Organization
+- **Library** → reusable building blocks (Actions, Flows, etc.)
+- **Canvas** → the visual surface where you design and debug
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+## Need help?
+- Use the **Chat Panel (Triton)** to create, connect, or run components conversationally.
+- Invite teammates from **Profile → Organization → View**.
+- Share feedback any time—your input shapes our roadmap.
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
-
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
-
-### Step 3: Go live
-
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
-
-## Next steps
-
-Now that you have your docs running, explore these key features:
-
-<CardGroup cols={2}>
-
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
-
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
-</CardGroup>
-
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
+---
