Documentation edits made through Mintlify web editor

--- a/getting-started/login.mdx
+++ b/getting-started/login.mdx
@@ -6,7 +6,7 @@ description: "Sign in with Discord or GitHub and session basics"
 ## Sign in
 
 1. Go to **app.triform.ai**.
-2. Choose **Discord** or **GitHub**.
+2. Choose **Magic Link, Discord** or **GitHub**.
 3. Approve OAuth and you’ll be redirected to your Canvas.
 
 ## First‑time registration
